--- a/index.html
+++ b/index.html
@@ -3,29 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>MASTER RG - Mega Bot</title>
+    <title>MASTER RG - FAST & SMART</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
     <style>
         :root { --neon: #00f2ff; --gold: #ffd700; --bg: #000; }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; font-family: 'Cairo', sans-serif; }
         body { margin: 0; background: #000; color: #fff; overflow: hidden; position: fixed; width: 100%; height: 100%; }
-        header { height: 60px; background: #111; border-bottom: 2px solid var(--neon); display: flex; justify-content: space-between; align-items: center; padding: 0 15px; }
-        .page { position: fixed; inset: 0; background: #000; display: none; z-index: 10; padding-top: 60px; }
+        header { height: 60px; background: #111; border-bottom: 2px solid var(--neon); display: flex; justify-content: space-between; align-items: center; padding: 0 15px; z-index: 1000; }
+        .page { position: fixed; top: 60px; bottom: 0; left: 0; right: 0; background: #000; display: none; }
         .page.active { display: block; }
-        .lobby-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; padding: 15px; }
-        .room-btn { background: #111; padding: 25px; border-radius: 15px; border: 1px solid #333; text-align: center; color: var(--neon); }
-        .chat-area { position: absolute; top: 60px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; background: #050505; }
-        .msg { display: flex; margin-bottom: 15px; }
-        .msg img { width: 45px; height: 45px; border-radius: 10px; margin-left: 10px; border: 1px solid #222; }
-        .bubble { background: #1a1a1a; padding: 12px; border-radius: 15px; max-width: 80%; line-height: 1.5; }
-        .yt-frame { width: 100%; aspect-ratio: 16/9; margin-top: 10px; border-radius: 10px; border: 1px solid #333; }
-        .sidebar { position: fixed; top: 0; bottom: 0; right: -300px; width: 270px; background: #0d0d0d; z-index: 2000; transition: 0.3s; border-left: 2px solid var(--neon); padding: 20px; }
+        .lobby-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; padding: 15px; }
+        .room-card { background: #111; padding: 25px; border-radius: 15px; border: 1px solid #333; text-align: center; color: var(--neon); cursor: pointer; }
+        .chat-area { position: absolute; top: 0; bottom: 80px; width: 100%; overflow-y: auto; padding: 15px; background: #050505; }
+        .msg { display: flex; margin-bottom: 12px; }
+        .msg img { width: 40px; height: 40px; border-radius: 8px; margin-left: 10px; }
+        .bubble { background: #1a1a1a; padding: 10px 15px; border-radius: 15px; max-width: 80%; border: 0.5px solid #222; }
+        .input-bar { position: absolute; bottom: 0; width: 100%; height: 80px; background: #111; display: flex; align-items: center; padding: 10px; border-top: 1px solid #222; }
+        #mInp { flex: 1; background: #000; border: 1px solid #333; color: #fff; padding: 12px; border-radius: 10px; text-align: right; }
+        .s-btn { background: var(--neon); border: none; padding: 10px 15px; border-radius: 10px; margin-right: 5px; font-weight: bold; }
+        .sidebar { position: fixed; top: 0; bottom: 0; right: -280px; width: 260px; background: #0a0a0a; z-index: 2000; transition: 0.3s; border-left: 2px solid var(--neon); padding: 20px; }
         .sidebar.active { right: 0; }
-        .input-bar { position: absolute; bottom: 0; width: 100%; height: 85px; background: #111; display: flex; align-items: center; padding: 15px; }
-        #mInp { flex: 1; background: #000; border: 1px solid #333; color: #fff; padding: 12px; border-radius: 12px; text-align: right; }
-        .s-btn { background: var(--neon); border: none; width: 50px; height: 50px; border-radius: 12px; margin-right: 10px; color: #000; font-size: 20px; font-weight: bold; }
         #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.8); display: none; z-index: 1500; }
     </style>
 </head>
@@ -34,24 +33,24 @@
 <header>
     <button onclick="toggleSide()" style="background:none; border:none; color:var(--neon); font-size:24px;">☰</button>
     <b style="color:var(--gold)">MASTER RG 👑</b>
-    <div id="on-count" style="font-size:11px; color:var(--neon)">جاري الاتصال..</div>
+    <div id="on-ui" style="font-size:10px; color:var(--neon)">متصل..</div>
 </header>
 
-<div id="lobby" class="page active">
+<div id="lobby-page" class="page active">
     <div class="lobby-grid">
-        <div class="room-btn" onclick="enter('main', '🏛 العرش')">👑 العرش</div>
-        <div class="room-btn" onclick="enter('game', '🏆 المسابقات')">🎮 المسابقات</div>
-        <div class="room-btn" onclick="enter('vip', '💎 الديوان')">💎 الديوان</div>
-        <div class="room-btn" onclick="enter('elite', '🤝 النخبة')">🤝 النخبة</div>
+        <div class="room-card" onclick="joinRoom('main', '🏛 العرش')">👑 العرش</div>
+        <div class="room-card" onclick="joinRoom('game', '🏆 المسابقات')">🎮 المسابقات</div>
+        <div class="room-card" onclick="joinRoom('vip', '💎 الديوان')">💎 الديوان</div>
+        <div class="room-card" onclick="joinRoom('elite', '🤝 النخبة')">🤝 النخبة</div>
     </div>
 </div>
 
-<div id="chat" class="page">
+<div id="chat-page" class="page">
     <div id="msgs" class="chat-area"></div>
     <div class="input-bar">
-        <input type="text" id="mInp" placeholder="سولف ويه البوت أو اكتب 'سؤال'..">
-        <button onclick="sendMsg()" class="s-btn">➤</button>
-        <button onclick="back()" style="background:#222; border:none; padding:10px; border-radius:12px; margin-right:5px; color:#fff">🔙</button>
+        <input type="text" id="mInp" placeholder="سولف ويه البوت...">
+        <button onclick="send()" class="s-btn">إرسال</button>
+        <button onclick="leave()" style="background:#444; border:none; padding:10px; border-radius:10px; margin-right:5px; color:#fff">🔙</button>
     </div>
 </div>
 
@@ -59,7 +58,6 @@
 <div id="sidebar" class="sidebar">
     <h3 style="color:var(--neon)">المتواجدون</h3>
     <div id="user-list"></div>
-    <button onclick="localStorage.clear(); location.reload();" style="width:100%; margin-top:30px; background:red; border:none; padding:10px; color:#fff; border-radius:10px;">خروج</button>
 </div>
 
 <script>
@@ -67,78 +65,47 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    let my = { n: localStorage.getItem('rg_n') || "", xp: parseInt(localStorage.getItem('rg_xp')) || 0 };
+    let my = { n: localStorage.getItem('rg_n') || "", flag: "🇮🇶" };
     if(!my.n) { let n = prompt("ادخل اسمك:"); if(n){ localStorage.setItem('rg_n', n); location.reload(); } }
 
-    let curRoom = "", curAns = "";
-    const quiz = [{q:"عاصمة العراق؟", a:"بغداد"}, {q:"أكبر كوكب؟", a:"المشتري"}];
-
-    // 🔥 محرك التفاعل الذكي (Smart Interaction Engine)
-    function getBotReply(msg) {
-        const t = msg.toLowerCase().trim();
-        const replies = {
-            "هلو": ["هلا وكل الهلا بنور الشات 👑", "أطلق هلو من أطلق عضو! نورتنا", "هلا يا طيب، شلونك؟"],
-            "شلونك": ["بخير وعافية ما دام أشوفك متصل 🌹", "تمام التمام، أنت بشرني عنك؟", "الحمد لله يا بطل، تسلم على السؤال"],
-            "منور": ["النور بوجودك يا غالي، الشات شعشعت"، "أنت أصل النور والجمال كله"، "نورك غطى على نيون الشات!"],
-            "كفو": ["كفو من شاربك الطيب يا شهم"، "أنت أصل الكفو والله"، "تستاهل لقب الذيب!"],
-            "هههه": ["دوم الضحكة يا رب، فدوة لهالضحكة 😂", "ضحكة خير إن شاء الله"، "عسى دوم متبسم ومنورنا"],
-            "ضوجة": ["منو المزعلك؟ احجيلي وأنا أحلهه الك!", "اترك الضوجة وسولف ويه الإمبراطورية"، "الضوجة تموت بسؤال من البوت، اكتب 'سؤال'"],
-            "منو الماستر": ["الماستر RG هو قائدنا ومؤسس هالصرح العظيم 👑"],
-            "تحبني": ["أحبك وأعزك لأنك جزء من عائلة MASTER RG 💙"],
-            "بوت": ["نعم يا عيوني؟ كول اللي بقلبك وأنا أسمعك", "موجود لخدمتك يا طيب، تآمرني بشيء؟"],
-            "منو أنت": ["أنا بوت إمبراطورية MASTER RG، حارسكم وصديقكم الوفي"]
-        };
-
-        for (let key in replies) {
-            if (t.includes(key)) {
-                const list = replies[key];
-                return list[Math.floor(Math.random() * list.length)];
-            }
-        }
-        return null;
-    }
+    const botTalk = {
+        "هلو": "هلا وغلا بنور الإمبراطورية 👑",
+        "شلونك": "بخير يا بعد روحي، أنت شلونك؟",
+        "منور": "نورك هذا عاكس يا غالي 🌹",
+        "هههه": "دوم هالضحكة الحلوة يارب 😂",
+        "كفو": "كفو منك ومن أصلك الطيب ذيب!",
+        "ضوجة": "ليش الضوجة؟ اكتب 'سؤال' وخلينا نتسلى!"
+    };
 
     function presence() {
-        db.ref('status/'+my.n).set({n:my.n}); db.ref('status/'+my.n).onDisconnect().remove();
-        db.ref('status').on('value', snap => {
-            let list = document.getElementById('user-list'); list.innerHTML = "";
-            let c = 0; snap.forEach(u => { c++; list.innerHTML += `<div style="padding:8px; border-bottom:1px solid #222;">🟢 ${u.val().n}</div>`; });
-            document.getElementById('on-count').innerText = c + " متصل";
+        db.ref('online/'+my.n).set({n:my.n}); db.ref('online/'+my.n).onDisconnect().remove();
+        db.ref('online').on('value', snap => {
+            let box = document.getElementById('user-list'); box.innerHTML = "";
+            let c = 0; snap.forEach(u => { c++; box.innerHTML += `<div style="padding:5px;">🟢 ${u.val().n}</div>`; });
+            document.getElementById('on-ui').innerText = c + " متصل";
         });
     }
     presence();
 
-    function getYT(t) {
-        const r = /^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/;
-        const m = t.match(r); return (m && m[2].length === 11) ? m[2] : null;
+    let curRoom = "";
+    function joinRoom(id, title) {
+        curRoom = id;
+        document.getElementById('lobby-page').classList.remove('active');
+        document.getElementById('chat-page').classList.add('active');
+        loadMsgs();
     }
 
-    function enter(id, title) {
-        curRoom = id; document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));
-        document.getElementById('chat').classList.add('active'); loadMsgs();
-    }
-
-    function sendMsg() {
+    function send() {
         let t = document.getElementById('mInp').value.trim(); if(!t) return;
+        db.ref('rooms/'+curRoom).push({ u: my.n, t: t });
         
-        // 1. فحص إجابة المسابقة
-        if(curAns && t === curAns) {
-            db.ref('rooms/'+curRoom).push({ u: "🤖 BOT", t: "🌟 بطل! إجابة صحيحة يا " + my.n, bot: true });
-            my.xp += 20; localStorage.setItem('rg_xp', my.xp); curAns = "";
-        } 
-        // 2. فحص طلب المسابقة
-        else if(t === "سؤال" || t === "تحدي") {
-            let q = quiz[Math.floor(Math.random()*quiz.length)]; curAns = q.a;
-            db.ref('rooms/'+curRoom).push({ u: "🤖 BOT", t: "💡 تحدي جديد: " + q.q, bot: true });
-        } 
-        // 3. التفاعل مع السوالف
-        else {
-            db.ref('rooms/'+curRoom).push({ u: my.n, t: t, lv: (Math.floor(my.xp/50)+1) });
-            let reply = getBotReply(t);
-            if(reply) {
+        // تفاعل البوت
+        for(let key in botTalk) {
+            if(t.includes(key)) {
                 setTimeout(() => {
-                    db.ref('rooms/'+curRoom).push({ u: "🤖 BOT", t: reply, bot: true });
-                }, 700);
+                    db.ref('rooms/'+curRoom).push({ u: "🤖 BOT", t: botTalk[key], bot: true });
+                }, 800);
+                break;
             }
         }
         document.getElementById('mInp').value = "";
@@ -148,19 +115,15 @@
         db.ref('rooms/'+curRoom).off();
         let box = document.getElementById('msgs'); box.innerHTML = "";
         db.ref('rooms/'+curRoom).limitToLast(25).on('child_added', snap => {
-            let m = snap.val(); let yt = getYT(m.t);
+            let m = snap.val();
             let div = document.createElement('div'); div.className = 'msg';
             div.innerHTML = `<img src="https://ui-avatars.com/api/?name=${m.u}&background=222&color=fff">
-                <div class="bubble">
-                    <b style="color:${m.bot?'var(--gold)':'var(--neon)'}">${m.u} ${m.lv?`[Lv.${m.lv}]`:''}</b><br>
-                    <span>${m.t}</span>
-                    ${yt ? `<iframe class="yt-frame" src="https://www.youtube.com/embed/${yt}" frameborder="0" allowfullscreen></iframe>` : ''}
-                </div>`;
+                <div class="bubble"><b style="color:${m.bot?'var(--gold)':'var(--neon)'}">${m.u}</b><br>${m.t}</div>`;
             box.appendChild(div); box.scrollTop = box.scrollHeight;
         });
     }
 
-    function back() { document.getElementById('chat').classList.remove('active'); document.getElementById('lobby').classList.add('active'); }
+    function leave() { document.getElementById('chat-page').classList.remove('active'); document.getElementById('lobby-page').classList.add('active'); }
     function toggleSide() { 
         let s = document.getElementById('sidebar'); s.classList.toggle('active');
         document.getElementById('overlay').style.display = s.classList.contains('active') ? 'block' : 'none';
